package entities;

public enum EstadoSolicitudEliminacion {
    ACEPTADA,
    RECHAZADA,
    PENDIENTE
}
