package models.entities.hechos;
import java.util.List;

public interface Fuente {
    public List<Hecho> importarHechos();
}
