package models.entities.hechos;

import models.entities.usuarios.Contribuyente;

public class FuenteDinamica {
    private Contribuyente contribuyente;

    public FuenteDinamica(Contribuyente contribuyente) {
        this.contribuyente = contribuyente;
    }
}
